tests/snapshots/fixtures/otree__1500.snap
---
source: tests/snapshots.rs
expression: rendered
---
.github/
    dependabot.yml
    workflows/
        cargo-check.yml
        release-binary.yml
        spell-check.yml
.gitignore
Cargo.lock
Cargo.toml
    1→[package]
    2→name = "otree"
    3→version = "0.6.4"
    4→edition = "2021"
    5→build = "build.rs"
    6→license = "MIT"
    7→authors = ["fioncat"]
    8→categories = ["command-line-utilities"]
    9→readme = "README.md"
    10→repository = "https://github.com/fioncat/otree"
    11→description = "A command line tool to view objects (json/yaml/toml) in TUI tree widget"
LICENSE
README.md
    1→# OTree - Object Tree TUI Viewer
    3→![screenshot](assets/screenshot.png)
assets/
    screenshot.png
build.rs
config/
    default.toml
    themes/
        catppuccin.toml
docs/
    actions.md
    changelog.md
    colors.md
examples/
    edge.json
    edge.toml
    edge.yaml
    example.hcl
    example.json
    example.jsonl
    example.toml
    example.xml
    example.yaml
src/
    clipboard.rs
        28→pub fn write_clipboard(text: &str) -> Result<()> {
        …
    cmd.rs
        13→pub struct CommandArgs {
        …
    config/
        colors.rs
        keys.rs
            54→pub enum Key {
            …
            195→pub struct Keys {
            …
            351→pub struct KeyAction {
            …
        mod.rs
            17→pub struct Config {
            …
            53→pub struct Tree {
            54→    #[serde(default = "Config::disable")]
            55→    pub disable_selected_highlight: bool,
            57→    #[serde(default = "String::new")]
            58→    pub selected_symbol: String,
            59→}
            62→pub struct Editor {
            63→    #[serde(default = "Editor::default_program")]
            64→    pub program: String,
            66→    #[serde(default = "Editor::default_args")]
            67→    pub args: Vec<String>,
            69→    #[serde(default = "Editor::default_dir")]
            70→    pub dir: String,
            71→}
            74→pub struct Layout {
            75→    #[serde(default = "Layout::default_direction")]
            76→    pub direction: LayoutDirection,
            78→    #[serde(default = "Layout::default_tree_size")]
            79→    pub tree_size: u16,
            80→}
            83→pub enum LayoutDirection {
            84→    #[serde(rename = "vertical")]
            85→    Vertical,
            86→    #[serde(rename = "horizontal")]
            87→    Horizontal,
            88→}
            91→pub struct Header {
            92→    #[serde(default = "Config::disable")]
            93→    pub disable: bool,
            95→    #[serde(default = "Header::default_format")]
            96→    pub format: String,
            97→}
            100→pub struct Footer {
            101→    #[serde(default = "Config::disable")]
            102→    pub disable: bool,
            103→}
            106→pub struct Filter {
            107→    #[serde(default = "Config::disable")]
            108→    pub disable: bool,
            110→    #[serde(default = "Filter::default_ignore_case")]
            111→    pub ignore_case: bool,
            113→    #[serde(default = "Filter::default_exclude_mode")]
            114→    pub exclude_mode: bool,
            115→}
            118→pub struct Data {
            119→    #[serde(default = "Config::disable")]
            120→    pub disable_highlight: bool,
            121→    #[serde(default = "Config::default_max_data_size")]
            122→    pub max_data_size: usize,
            123→    #[serde(default = "Config::disable")]
            124→    pub wrap: bool,
            125→}
        types.rs
            28→pub struct Types {
            …
    debug.rs
        8→macro_rules! debug {
        9→    ($($arg:tt)*) => {
        10→        if let Err(_) = $crate::debug::write_logs(format!($($arg)*)) {
        11→            // FIXME: How to handle err when writing logs failed?
        12→            // We cannot write error to stderr since it is used for TUI.
        13→        }
        14→    };
        15→}
        19→pub fn set_file(file: String) {
        …
        23→pub fn write_logs(mut msg: String) -> Result<()> {
        …
    edit.rs
        10→pub struct Edit {
        11→    path: String,
        12→    data: String,
        13→    cmd: Command,
        14→}
    live_reload.rs
        16→pub struct FileWatcher {
        17→    path: PathBuf,
        19→    cfg: Rc<Config>,
        20→    content_type: ContentType,
        22→    max_data_size: usize,
        24→    data: Arc<Mutex<Data>>,
        25→}
    main.rs
    parse/
    tree.rs
        14→pub struct Tree {
        15→    pub parser: Rc<Box<dyn Parser>>,
        17→    pub items: Vec<TreeItem<'static, String>>,
        18→    pub values: HashMap<String, ItemValue>,
        20→    pub identifies: Vec<String>,
        22→    cfg: Rc<Config>,
        23→}
        25→pub struct ItemValue {
        26→    pub name: String,
        27→    pub value: Value,
        29→    pub field_type: FieldType,
        30→    pub description: Cow<'static, str>,
        32→    pub tokens: Vec<SyntaxToken>,
        33→}
        36→pub struct HighlightKeyword<'a> {
        37→    pub text: &'a str,
        38→    pub ignore_case: bool,
        39→}
        42→pub enum FieldType {
        43→    Null,
        44→    Num,
        45→    Bool,
        46→    Str,
        47→    Obj,
        48→    Arr,
        49→}
    ui/
typos.toml
